constraints/pod-security-policy-allow-privilege-escalation-samples-psp-allow-privilege-escalation-container-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowPrivilegeEscalationContainer
metadata: # kpt-merge: /psp-allow-privilege-escalation-container
  name: psp-allow-privilege-escalation-container-sample
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
